Idempotent INSERT events for system versioning

Case 1: Rows_log_event::write_row() always overwrite historical row.

Related to MDEV-16370.